--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ h1 {
 	background: #f9f9f9;;
 }
 
-.start {
+#start {
 	text-align: center;
         border: none;
         padding: 0.6em 1.2em;
@@ -63,4 +63,8 @@ h1 {
         display: inline-block;
         margin: 3px 2px;
         border-radius: 2px;
+}
+
+#start:hover {
+	 background: #ffb847;
 }
